# rust-content-security-policy

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE_PROCESS.md
.github/workflows/: main.yml
src/: lib.rs  parse.lalrpop  parse.rs  sandboxing_directive.rs  text_util.rs  types.rs
src/check/: README.md  mod.rs  search.rs  tree.rs
src/syntax/: README.md  directive.lalrpop  directive.rs  media_type.lalrpop  media_type.rs  mod.rs  source_expression.lalrpop  source_expression.rs  types.rs
tests/: base-uri.rs  csp-quick-check.rs  examples.rs  sandbox.rs  version-numbers.rs
