[package]
name = "content-security-policy"
version = "0.4.2"
authors = ["Michael Howell <michael@notriddle.com>"]
description = "Will parse and validate Content-Security-Policy level 3"
keywords = ["http", "csp", "security"]
license = "MIT / Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/content-security-policy/"
repository = "https://github.com/notriddle/rust-content-security-policy"

[dependencies]
url = "2"
percent-encoding = "2.1"
regex = "1.1"
lazy_static = "1.2"
bitflags = "1.0.4"
version-sync = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.8"
base64 = "0.12"
