[package]
name = "content-security-policy"
version = "0.5.0"
authors = ["Michael Howell <michael@notriddle.com>"]
description = "Will parse and validate Content-Security-Policy level 3"
keywords = ["http", "csp", "security"]
license = "MIT / Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/content-security-policy/"
repository = "https://github.com/notriddle/rust-content-security-policy"
edition = "2018"
exclude = [
  "Cargo.nix",
  "default.nix",
  "nix/",
  "shell.nix"
]

[dependencies]
url = "2"
percent-encoding = "2.1"
regex = "1.1"
bitflags = "1.3"
version-sync = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10"
base64 = "0.13"
once_cell = "1.9"